# AiPoweredCollegeManagement

./: AiPoweredCollegeManagement.ipynb  DEPLOY.md  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  setup.py
.github/workflows/: deploy.yml
app/: main.py  tasks.py
app/api/: routes.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: proctoring.py
app/ui/: enterprise_ui.py
client/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
client/app/: layout.tsx
client/app/dashboard/: page.tsx
client/app/exams/: page.tsx
client/app/login/: page.tsx
client/app/register/: page.tsx
client/components/layout/: header.tsx  index.ts  layout.tsx  sidebar.tsx
client/components/ui/: button.tsx
client/lib/: api.ts  store.ts  utils.ts
client/styles/: globals.css
client/types/: index.ts
